# picostation

./: .gitignore  CMakeLists.txt  hw_config.c
.github/workflows/: cmake.yml
src/: i2s.c
